footer and scrollbar fixed

--- a/style.css
+++ b/style.css
@@ -1,15 +1,27 @@
 body {
     font-family: "Lato", sans-serif;
+    direction: rtl;
 }
+
+*{
+    padding: 0;
+    margin: 0;
+    overflow-x: hidden;
+}
+
 .sexy{
     background-color: #f5363E;
-    padding-bottom: -20px;
-    margin: -8px;
+    z-index: 2;
+    width: 100%;
 }
 
 .Logo{
     width: 35px;
     height: 35px;
+    text-align: left;
+    margin-right: auto;
+    margin-left: 0;
+    float: left;
 }
 .sidenav {
     height: 100%;
@@ -63,7 +75,6 @@ body {
     width: 100%;
     height: 200px;
     max-height: 200px;
-    margin-top: -2px;
     padding-right: -100px;
 }
 
@@ -71,7 +82,6 @@ body {
 /* Slideshow container */
 .slideshow-container {
     position: relative;
-    margin: 8px -8px 0 -8px;
 }
 
 /* Next & previous buttons */
@@ -92,6 +102,11 @@ body {
 
 /* Position the "next button" to the right */
 .next {
+    left: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev {
     right: 0;
     border-radius: 3px 0 0 3px;
 }
@@ -108,12 +123,16 @@ body {
     padding: 8px 12px;
     position: absolute;
     top: 0;
+    left:0;
 }
 
 .dokme-paeen{
     text-align: center;
-    margin-top: -35px;
-    margin-left: -35px;
+    margin: 0 47% 0 49%;
+    bottom: 0;
+    position: absolute;
+    padding: 0;
+    z-index: 2;
 }
 
 /* The dots/bullets/indicators */
@@ -238,12 +257,37 @@ body {
     font-size: 18px;
 }
 
-.Menu-Scroll{
+#Menu-Scroll{
     width: 100%;
     white-space: nowrap;
     overflow-x: auto;
-
+    margin-right: auto;
 }
+
+#footer {
+    position: relative;
+    bottom: 0;
+    text-align: center;
+    margin: 0 auto;
+    background: #f5363e;
+    width: 100%;
+    height: 80px;
+}
+
+#footer p {
+    color: #FDFDFD;
+    display: inline;
+    text-align: left;
+}
+
+#footer p > a {
+    color: #FDFDFD;
+    display: inline-block;
+    text-align: right;
+    float: right;
+}
+
+#footer
 @viewport{
     zoom: 1.0;
 }
